--- a/lib/generators/cable_ready/templates/app/javascript/controllers/%file_name%_controller.js.tt
+++ b/lib/generators/cable_ready/templates/app/javascript/controllers/%file_name%_controller.js.tt
@@ -1,4 +1,5 @@
 import { Controller } from 'stimulus'
+import { version } from '../package.json'
 import CableReady from 'cable_ready'
 
 export default class extends Controller {
@@ -14,7 +15,9 @@ export default class extends Controller {
         },
         {
           received (data) {
-            if (data.cableReady) CableReady.perform(data.operations)
+            if (data.cableReady && data.version === version)
+              CableReady.perform(data.operations)
+            else console.error('CableReady gem/npm package version mismatch.')
           }
         }
       )
