First iteration of new Installer that should handle all JavaScript setups in Rails 7

--- a/lib/generators/cable_ready/templates/app/javascript/controllers/%file_name%_controller.js.tt
+++ b/lib/generators/cable_ready/templates/app/javascript/controllers/%file_name%_controller.js.tt
@@ -1,4 +1,4 @@
-import { Controller } from 'stimulus'
+import { Controller } from '@hotwired/stimulus'
 import CableReady from 'cable_ready'
 
 export default class extends Controller {
