--- a/lib/generators/cable_ready/templates/app/views/examples/show.html.erb.tt
+++ b/lib/generators/cable_ready/templates/app/views/examples/show.html.erb.tt
@@ -156,7 +156,7 @@
 
         <!--
         <%%#= updates_for current_user do %>
-          <%%#= current_user.name %>
+          <p style="margin-top: 1rem;"><%%#= current_user.name %></p>
         <%%# end %>
         -->
 
@@ -175,10 +175,10 @@
 
         <!--
         <%%#= updates_for User do %>
-          <ul>
-            <%%#= @users.each do |user| %>
+          <ul style="margin-top: 1rem;">
+            <%%# @users.each do |user| %>
               <li><%%#= user.name %></li>
-            <%%#= end %>
+            <%%# end %>
           </ul>
         <%%# end %>
         -->
@@ -196,10 +196,10 @@
 
         <!--
         <%%#= updates_for current_user, :posts do %>
-          <ul>
-            <%%#= @posts.each do |post| %>
+          <ul style="margin-top: 1rem;">
+            <%%# @posts.each do |post| %>
               <li><%%#= post.title %></li>
-            <%%#= end %>
+            <%%# end %>
           </ul>
         <%%# end %>
         -->
