--- a/lib/generators/cable_ready/templates/app/controllers/examples_controller.rb.tt
+++ b/lib/generators/cable_ready/templates/app/controllers/examples_controller.rb.tt
@@ -4,9 +4,9 @@ class ExamplesController < ApplicationController
   def show
     respond_to do |format|
       format.html
-      format.turbo_stream do
-        render turbo_stream: turbo_stream.append_all("body", cable_ready_tag(cable_car.console_log(message: "Dear John,\n\nI'd hoped this day would never come. I loved you, but I don't recognize who you've become.\n\nIt's over, and I'm taking the kids.\n\nDon't try to contact me. I hope that Turbo Streams makes you happy in all of the ways that I never could.\n\nGladys")))
-      end if defined?(Turbo)
+      # format.turbo_stream do
+      #   render turbo_stream: turbo_stream.append_all("body", cable_ready_tag(cable_car.console_log(message: "Dear John,\n\nI'd hoped this day would never come. I loved you, but I don't recognize who you've become.\n\nIt's over, and I'm taking the kids.\n\nDon't try to contact me. I hope that Turbo Streams makes you happy in all of the ways that I never could.\n\nGladys")))
+      # end if defined?(Turbo)
     end
   end
 
@@ -14,7 +14,7 @@ class ExamplesController < ApplicationController
     # respond with [{"html":"Created","selector":"#cable_car_output","operation":"innerHtml"}]
     render operations: cable_car.inner_html("#cable_car_output", html: "Created")
   end
-  
+
   def update
     render operations: cable_car
       .inner_html("#cable_car_output", html: "Updated")
